Bug fix: Increases z-index of favorites overlay so that the layer is above highlighted files/folders.

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -4714,7 +4714,7 @@ input#element-class {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 10;
+	z-index: 100;
 	opacity: .9;
 }
 
